--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/play_btn"
+            android:id="@+id/play_pause_btn"
             android:layout_width="100sp"
             android:layout_height="100sp"
             android:layout_centerHorizontal="true"
@@ -47,7 +47,7 @@
             android:id="@+id/next_btn"
             android:layout_width="80sp"
             android:layout_height="80sp"
-            android:layout_toRightOf="@+id/play_btn"
+            android:layout_toRightOf="@+id/play_pause_btn"
             android:layout_marginTop="10sp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/ic_baseline_skip_next_24"
@@ -56,7 +56,7 @@
             android:id="@+id/prev_btn"
             android:layout_width="80sp"
             android:layout_height="80sp"
-            android:layout_toLeftOf="@id/play_btn"
+            android:layout_toLeftOf="@id/play_pause_btn"
             android:layout_marginTop="10sp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/ic_baseline_skip_previous_24"
